--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
-    "formidable": "^1.2.2"
+    "express-session": "^1.17.2",
+    "formidable": "1.2.2"
   }
 }
