package.json mod

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "filemanager",
   "version": "1.0.0",
-  "description": "",
+  "description": "filemanager bembers",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
+  "author": "Maciej Bednarz",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
